fixed footer scrolling on mobile

--- a/styles/_responsive.sass
+++ b/styles/_responsive.sass
@@ -1,5 +1,5 @@
 .section
-  overflow-x: hidden
+  overflow: hidden
 
 
 @media screen and (max-width: $breakpoint-m)
